# keepwarm

./: .gitignore  LANE1.md  README.md  architecture.md  lane2_spec.md  pyproject.toml  usecases.md
src/keepwarm/: __init__.py  contracts.py  cost_models.py
src/keepwarm/compaction/: __init__.py  compactor.py
src/keepwarm/context/: __init__.py  context.py
tests/: test_compaction.py  test_context.py  test_contracts.py  test_gate0.py  test_gate0_realistic.py
tests/fixtures/: realistic_prompts.py
